--- a/public/admin-analytics.html
+++ b/public/admin-analytics.html
@@ -1,63 +1,145 @@
 <!doctype html>
 <html lang="lv">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Dashboard</title>
-
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    body{ font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial; margin:20px; background:#f6f7f9; color:#111; }
-    .wrap{ max-width:1100px; margin:0 auto; }
-    .card{ background:#fff; border:1px solid #d8dde3; border-radius:16px; padding:14px; box-shadow:0 6px 18px rgba(0,0,0,.06); }
-    h1{ margin:0 0 10px; font-size:18px; font-weight:900; }
-    .grid{ display:grid; grid-template-columns: 1fr; gap:12px; }
-    @media (min-width:900px){ .grid{ grid-template-columns: 1.2fr .8fr; } }
-    #map{ height:460px; border-radius:14px; border:1px solid #ddd; }
-    table{ width:100%; border-collapse:collapse; }
-    th, td{ padding:8px 10px; border-bottom:1px solid #eee; font-size:13px; vertical-align:top; }
-    th{ text-align:left; font-weight:900; background:#fafbfc; position:sticky; top:0; }
-    .muted{ color:#666; font-size:12px; }
-    .row{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
-    select, button, a{ padding:10px 12px; border-radius:12px; border:1px solid #d8dde3; background:#fff; font-weight:800; text-decoration:none; color:#111; cursor:pointer; }
-    a:hover, button:hover{ background:#eef3f8; }
-    canvas{ width:100%; height:220px; border:1px solid #eee; border-radius:14px; }
+    :root{--bg:#f6f7fb;--card:#fff;--border:#e6e8ef;--text:#111827;--muted:#6b7280;}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--text)}
+    a{color:#1f6feb;text-decoration:none}
+    .wrap{max-width:1200px;margin:0 auto;padding:18px}
+    .topbar{display:flex;gap:12px;align-items:center;justify-content:space-between;margin-bottom:12px}
+    .title{font-size:20px;font-weight:700}
+    .controls{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+    .pill{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:8px 10px;display:flex;gap:8px;align-items:center}
+    select,button{font:inherit}
+    select{border:1px solid var(--border);border-radius:10px;padding:8px 10px;background:#fff}
+    button{border:1px solid var(--border);border-radius:10px;padding:8px 12px;background:#fff;cursor:pointer}
+    button.primary{background:#0f172a;color:#fff;border-color:#0f172a}
+    .grid2{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:18px;padding:14px}
+    .card h3{margin:0 0 8px 0;font-size:16px}
+    .muted{color:var(--muted);font-size:13px}
+    .kpi{display:flex;gap:16px;flex-wrap:wrap;margin-top:6px}
+    .kpi .item{min-width:140px}
+    .kpi .num{font-size:22px;font-weight:800;margin-top:2px}
+    .bullets{margin:8px 0 0 18px;color:var(--text)}
+    .bullets li{margin:6px 0}
+    .full{margin-top:12px}
+    #chartWrap{height:260px}
+    #map{height:440px;border-radius:16px;border:1px solid var(--border)}
+    table{width:100%;border-collapse:collapse}
+    th,td{font-size:13px;padding:8px;border-bottom:1px solid var(--border);vertical-align:top}
+    th{color:var(--muted);text-align:left;font-weight:600}
+    .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+    .badge{font-size:12px;color:var(--muted)}
+    @media (max-width:900px){.grid2{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
 <div class="wrap">
-  <div class="card">
-    <div class="row" style="justify-content:space-between;">
-      <h1>Dashboard (live)</h1>
-      <div class="row">
-        <a href="/admin">Admin</a>
+  <!-- STATUS TOP -->
+  <div class="topbar">
+    <div class="title">Dashboard</div>
+    <div class="controls">
+      <a class="pill" href="/admin">Admin</a>
+      <div class="pill">
         <span class="muted">Mēnesis:</span>
         <select id="monthSel"></select>
-        <button id="reloadBtn">Pārlādēt</button>
+      </div>
+      <button id="btnReload" class="primary">Pārlādēt</button>
+    </div>
+  </div>
+
+  <div class="grid2">
+    <div class="card">
+      <h3>Dati par šo mēnesi ielādēti</h3>
+      <div class="muted" id="importInfo">—</div>
+    </div>
+    <div class="card">
+      <h3>Sagatavoti ielūgumi</h3>
+      <div class="kpi">
+        <div class="item">
+          <div class="muted">Unikālie tokeni</div>
+          <div class="num" id="tokenCount">—</div>
+        </div>
+      </div>
+      <div class="muted">Skaits no invite_tokens izvēlētajam mēnesim.</div>
+    </div>
+  </div>
+
+  <!-- METRICS -->
+  <div class="grid2 full">
+    <div class="card">
+      <h3>Šodien / vakar</h3>
+      <div class="kpi">
+        <div class="item">
+          <div class="muted">Šodien iesniegumi</div>
+          <div class="num" id="todaySub">—</div>
+        </div>
+        <div class="item">
+          <div class="muted">Šodien abonenti</div>
+          <div class="num" id="todayUsers">—</div>
+        </div>
+        <div class="item">
+          <div class="muted">Vakar iesniegumi</div>
+          <div class="num" id="ydaySub">—</div>
+        </div>
+        <div class="item">
+          <div class="muted">Vakar abonenti</div>
+          <div class="num" id="ydayUsers">—</div>
+        </div>
       </div>
     </div>
 
-    <div class="grid" style="margin-top:10px;">
+    <div class="card">
+      <h3>Datu anomālijas panelis</h3>
+      <ul class="bullets">
+        <li><b id="anZero">—</b> iesniegumu rindas ar “0 patēriņš” (var būt ok, bet ja par daudz – signāls)</li>
+        <li><b id="anNeg">—</b> iesniegumu rindas ar “negatīvs patēriņš” (jābūt 0; ja parādās, bug)</li>
+        <li><b id="anLt">—</b> iesniegumu rindas ar “rādījums &lt; pēdējais rādījums” (potenciāls kļūdains ievads)</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- DYNAMICS -->
+  <div class="card full">
+    <h3>Dinamika pa laiku</h3>
+    <div class="muted">Iesniegumi pa stundām: šodien vs vakar.</div>
+    <div id="chartWrap"><canvas id="hourChart"></canvas></div>
+  </div>
+
+  <!-- MAP FULL WIDTH -->
+  <div class="card full">
+    <div class="row" style="justify-content:space-between;">
       <div>
-        <div id="map"></div>
-        <div class="muted" style="margin-top:8px;" id="mapInfo">—</div>
-      <div class="row" style="margin-top:8px;">
-        <span class="muted">Karte:</span>
+        <h3 style="margin:0;">Karte</h3>
+        <div class="muted">Zaļie punkti no iesniegumiem. “Visi” = no 25. datuma 00:00.</div>
+      </div>
+      <div class="row">
+        <span class="muted">Skats:</span>
         <select id="mapRange">
-          <option value="all">Visi iesniegumi (no 25. datuma)</option>
+          <option value="all">Visi (no 25. datuma)</option>
           <option value="today" selected>Šodiena</option>
           <option value="hour">Pēdējā stunda</option>
         </select>
-        <span class="muted" id="missingInfo">—</span>
+        <span class="badge" id="mapCounts">—</span>
       </div>
+    </div>
 
-      <div style="margin-top:10px; max-height:200px; overflow:auto; border:1px solid #eee; border-radius:14px;">
+    <div style="margin-top:10px;" id="map"></div>
+
+    <div style="margin-top:12px;">
+      <h3>JŪ adreses nav atrastas (no iesniegumiem)</h3>
+      <div class="muted">Šīs adreses nav atrastas adresesJurmala.xlsx (pēc dzīvokļa noņemšanas). Kartē nerādām.</div>
+      <div style="margin-top:8px; max-height:220px; overflow:auto; border:1px solid var(--border); border-radius:14px;">
         <table>
           <thead>
             <tr>
-              <th>JŪ adrese nav atrasta (no iesniegumiem)</th>
+              <th>Adrese (iesniegumā)</th>
               <th>Pēdējais</th>
               <th>Iesn.</th>
             </tr>
@@ -65,229 +147,153 @@
           <tbody id="missingTbody"></tbody>
         </table>
       </div>
-
-
-        <div style="margin-top:12px;">
-          <div style="font-weight:900; margin-bottom:6px;">Iesniegumi pa stundām</div>
-          <canvas id="hourChart" width="900" height="240"></canvas>
-        </div>
-      </div>
-
-      <div>
-        <div style="font-weight:900; margin-bottom:6px;">Pēdējie 10 iesniegumi</div>
-        <div style="max-height:720px; overflow:auto; border:1px solid #eee; border-radius:14px;">
-          <table>
-            <thead>
-              <tr>
-                <th>Laiks</th>
-                <th>Adrese</th>
-                <th>Patēriņš</th>
-              </tr>
-            </thead>
-            <tbody id="latestTbody"></tbody>
-          </table>
-        </div>
-        <div class="muted" style="margin-top:8px;">Zaļš punkts parādās uzreiz pēc iesniegšanas.</div>
-      </div>
     </div>
   </div>
+
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const map = L.map('map').setView([56.968, 23.770], 12);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19 }).addTo(map);
+  const TZ = 'Europe/Riga';
+  const $ = (id)=>document.getElementById(id);
 
-  const markers = new Map(); // address -> marker
-
+  function fmtRiga(iso){
+    if(!iso) return '—';
+    try{
+      return new Date(iso).toLocaleString('lv-LV', { timeZone: TZ });
+    }catch(e){ return String(iso); }
+  }
   function escapeHtml(s){
     return String(s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
   }
 
-  function addGreenPoint(p) {
-    const key = p.address;
-    if (!key || markers.has(key)) return;
+  // Chart
+  let hourChart = null;
+  function renderHourChart(rows){
+    const labels = Array.from({length:24}, (_,i)=>String(i).padStart(2,'0'));
+    const today = new Array(24).fill(0);
+    const yday = new Array(24).fill(0);
+    (rows||[]).forEach(r=>{
+      const h = Number(r.hour);
+      if(Number.isFinite(h) && h>=0 && h<24){
+        today[h] = Number(r.today||0);
+        yday[h] = Number(r.yday||0);
+      }
+    });
 
-    const m = L.circleMarker([p.lat, p.lon], { radius:6 }).addTo(map);
-    const cons = (p.consumption_sum != null) ? `Patēriņš: ${escapeHtml(p.consumption_sum)} m³<br>` : '';
-    m.bindPopup(`<b>${escapeHtml(p.address)}</b><br>${cons}${escapeHtml(p.submitted_at || '')}`);
-    markers.set(key, m);
-    updateMapInfo();
+    const data = {
+      labels,
+      datasets: [
+        { label: 'Šodien', data: today },
+        { label: 'Vakar', data: yday }
+      ]
+    };
+
+    if(hourChart){ hourChart.data = data; hourChart.update(); return; }
+    hourChart = new Chart($('hourChart'), {
+      type:'bar',
+      data,
+      options:{
+        responsive:true,
+        maintainAspectRatio:false,
+        scales:{ y:{ beginAtZero:true, ticks:{ precision:0 } } }
+      }
+    });
   }
 
-  function updateMapInfo(){
-    document.getElementById('mapInfo').textContent = `Punkti kartē: ${markers.size}`;
-  }
+  // Map
+  const map = L.map('map').setView([56.97, 23.77], 11);
+  L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19, attribution:'&copy; OpenStreetMap' }).addTo(map);
+  const markerLayer = L.layerGroup().addTo(map);
 
-  function currentMonthYYYYMM(){
-    const d = new Date();
-    const y = d.getFullYear();
-    const m = String(d.getMonth()+1).padStart(2,'0');
-    return `${y}-${m}`;
-  }
-
-  function fillMonthSelect(){
-    const sel = document.getElementById('monthSel');
-    const cur = currentMonthYYYYMM();
-
+  async function loadMonths(){
+    const r = await fetch('/admin/api/report_months', { credentials:'include' });
+    const j = await r.json();
+    const months = (j && j.ok && Array.isArray(j.months)) ? j.months : [];
+    const sel = $('monthSel');
     sel.innerHTML = '';
-    const d = new Date();
-    for (let i=0;i<6;i++){
-      const y = d.getFullYear();
-      const m = String(d.getMonth()+1).padStart(2,'0');
-      const v = `${y}-${m}`;
+    if(!months.length){
       const opt = document.createElement('option');
-      opt.value = v; opt.textContent = v;
-      if (v === cur) opt.selected = true;
+      opt.value = '';
+      opt.textContent = '—';
       sel.appendChild(opt);
-      d.setMonth(d.getMonth()-1);
+      return;
     }
+    months.forEach((m,i)=>{
+      const opt = document.createElement('option');
+      opt.value = m;
+      opt.textContent = m;
+      if(i===0) opt.selected = true;
+      sel.appendChild(opt);
+    });
   }
 
-  async function loadMapPoints(){
-    markers.forEach(m => map.removeLayer(m));
-    markers.clear();
+  async function loadAnalytics(){
+    const month = $('monthSel').value || '';
+    const r = await fetch('/admin/api/analytics?month=' + encodeURIComponent(month), { credentials:'include' });
+    const j = await r.json();
+    if(!j || !j.ok) return;
 
-    const range = (document.getElementById('mapRange') || {}).value || 'today';
+    $('importInfo').textContent = j.last_import_at ? ('Ielādēts: ' + fmtRiga(j.last_import_at)) : 'Nav importa datu';
+    $('tokenCount').textContent = (j.tokens ?? 0);
 
-    const res = await fetch(`/admin/api/map_points?range=${encodeURIComponent(range)}`, { credentials:'include' });
-    const j = await res.json();
-    if (!j.ok) return;
+    $('todaySub').textContent = j.today?.today_submissions ?? 0;
+    $('todayUsers').textContent = j.today?.today_subs ?? 0;
+    $('ydaySub').textContent = j.today?.yday_submissions ?? 0;
+    $('ydayUsers').textContent = j.today?.yday_subs ?? 0;
 
-    (j.points || []).forEach(addGreenPoint);
-    updateMapInfo();
+    $('anZero').textContent = j.anomalies?.zero_consumption ?? 0;
+    $('anNeg').textContent = j.anomalies?.negative_consumption ?? 0;
+    $('anLt').textContent = j.anomalies?.reading_lt_prev ?? 0;
 
-    const tbody = document.getElementById('missingTbody');
-    const mi = document.getElementById('missingInfo');
-    if (tbody) tbody.innerHTML = '';
+    renderHourChart(j.hourly || []);
+  }
+
+  async function loadMap(){
+    markerLayer.clearLayers();
+    const range = $('mapRange').value;
+    const r = await fetch('/admin/api/map_points?range=' + encodeURIComponent(range), { credentials:'include' });
+    const j = await r.json();
+    if(!j || !j.ok) return;
+
+    const pts = j.points || [];
     const miss = j.missing || [];
-    if (mi) mi.textContent = `Nav atrastas adreses: ${miss.length}`;
-    for (const r of miss.slice(0, 200)) {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td>${escapeHtml(r.address || '')}</td>
-        <td>${escapeHtml(fmtTime(r.last_submitted_at))}</td>
-        <td><b>${escapeHtml(r.submissions || '')}</b></td>
-      `;
-      tbody.appendChild(tr);
-    }
-  }
 
-  function fmtTime(iso){
-    try{
-      const d = new Date(iso);
-      return d.toLocaleString('lv-LV', { hour12:false });
-    }catch{ return String(iso||''); }
-  }
+    pts.forEach(p=>{
+      const m = L.circleMarker([p.lat, p.lon], { radius:7, weight:1, fillOpacity:0.9 }).addTo(markerLayer);
+      const last = fmtRiga(p.last_submitted_at);
+      m.bindPopup('<b>' + escapeHtml(p.address) + '</b><br>Iesniegumi: ' + (p.submissions||0) + '<br>Pēdējais: ' + escapeHtml(last));
+    });
 
-  async function loadLatest(month){
-    const res = await fetch(`/admin/api/latest?month=${encodeURIComponent(month)}&limit=10`);
-    const j = await res.json();
-    const tbody = document.getElementById('latestTbody');
+    $('mapCounts').textContent = 'Punkti: ' + pts.length + ' | Nav atrastas adreses: ' + miss.length;
+
+    const tbody = $('missingTbody');
     tbody.innerHTML = '';
-    if (!j.ok) return;
-
-    for (const r of (j.rows || [])) {
+    miss.slice(0, 250).forEach(r=>{
       const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td>${escapeHtml(fmtTime(r.submitted_at))}</td>
-        <td>${escapeHtml(r.address || '')}</td>
-        <td><b>${escapeHtml(r.consumption_sum || '')}</b></td>
-      `;
+      tr.innerHTML = '<td>' + escapeHtml(r.address) + '</td>' +
+                     '<td>' + escapeHtml(fmtRiga(r.last_submitted_at)) + '</td>' +
+                     '<td><b>' + escapeHtml(r.submissions) + '</b></td>';
       tbody.appendChild(tr);
-    }
-  }
-
-  function drawBarChart(canvas, labels, values){
-    const ctx = canvas.getContext('2d');
-    const w = canvas.width, h = canvas.height;
-    ctx.clearRect(0,0,w,h);
-
-    const padL=44, padR=12, padT=12, padB=28;
-    const iw = w - padL - padR;
-    const ih = h - padT - padB;
-
-    const maxV = Math.max(1, ...values.map(v => Number(v)||0));
-
-    ctx.strokeStyle = '#ddd';
-    ctx.beginPath();
-    ctx.moveTo(padL, padT);
-    ctx.lineTo(padL, padT+ih);
-    ctx.lineTo(padL+iw, padT+ih);
-    ctx.stroke();
-
-    const n = values.length || 1;
-    const bw = iw / n;
-
-    ctx.fillStyle = '#1f5f86';
-    for (let i=0;i<n;i++){
-      const v = Number(values[i])||0;
-      const bh = (v/maxV)*ih;
-      const x = padL + i*bw + 2;
-      const y = padT + ih - bh;
-      ctx.fillRect(x, y, Math.max(2, bw-4), bh);
-    }
-
-    ctx.fillStyle = '#555';
-    ctx.font = '12px system-ui';
-    ctx.fillText('0', 10, padT+ih);
-    ctx.fillText(String(maxV), 10, padT+12);
-
-    const step = Math.ceil(n/8);
-    for (let i=0;i<n;i+=step){
-      const lbl = labels[i] || '';
-      ctx.save();
-      ctx.translate(padL + i*bw + 4, padT+ih+18);
-      ctx.rotate(-0.35);
-      ctx.fillText(lbl.slice(11,16), 0, 0);
-      ctx.restore();
-    }
-  }
-
-  async function loadByHour(month){
-    const res = await fetch(`/admin/api/by_hour?month=${encodeURIComponent(month)}`);
-    const j = await res.json();
-    if (!j.ok) return;
-
-    const rows = j.rows || [];
-    const labels = rows.map(x => x.hour);
-    const values = rows.map(x => x.cnt);
-
-    drawBarChart(document.getElementById('hourChart'), labels, values);
-  }
-
-  function prependLatestRow(p){
-    const tbody = document.getElementById('latestTbody');
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${escapeHtml(fmtTime(p.submitted_at))}</td>
-      <td>${escapeHtml(p.address || '')}</td>
-      <td><b>${escapeHtml(p.consumption_sum || '')}</b></td>
-    `;
-    tbody.prepend(tr);
-    while (tbody.children.length > 10) tbody.removeChild(tbody.lastChild);
-  }
-
-  function startSSE(){
-    const es = new EventSource('/admin/events');
-    es.addEventListener('submission', (e) => {
-      const p = JSON.parse(e.data || '{}');
-      if (p && p.lat && p.lon) addGreenPoint(p);
-      if (p && p.address) prependLatestRow(p);
     });
   }
 
   async function reloadAll(){
-    const month = document.getElementById('monthSel').value;
-    await loadMapPoints();
-    await loadLatest(month);
-    await loadByHour(month);
+    await loadAnalytics();
+    await loadMap();
   }
 
-  document.getElementById('reloadBtn').addEventListener('click', reloadAll);
+  $('btnReload').addEventListener('click', reloadAll);
+  $('monthSel').addEventListener('change', loadAnalytics);
+  $('mapRange').addEventListener('change', loadMap);
 
-  fillMonthSelect();
-  reloadAll();
-  startSSE();
+  (async ()=>{
+    await loadMonths();
+    await reloadAll();
+    setInterval(loadAnalytics, 30000);
+    setInterval(loadMap, 15000);
+  })();
 </script>
 </body>
 </html>
