UI: align meter row fields to same level

--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@
       display:grid;
       grid-template-columns: 170px 170px 220px 140px 54px; /* pēdējā ikonai */
       gap:10px;
-      align-items:end;
+      align-items:start;
       margin-top:10px;
     }
     .auto-meter-row.neg input[data-role="cons"]{ color:var(--danger); font-weight:1000; }
