--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,10 @@
 }
 .historyCell label{
   font-size:12px;
-  line-height:16px;
+  line-height:14px;
+  color:#667085;
+  margin-bottom:6px;
+  display:block;
 }
 
 /* Rotate / šaurāks ekrāns: 2 kolonnas, history vienmēr pa labi */
@@ -903,7 +906,7 @@
 }
 
 const f5 = el("div", { class:"field historyCell" }, [
-          el("label", { text:"." }),
+          el("label", { text:"Vēsture" }),
           histBtn
         ]);
 
