UI: history button styled like other fields (aligned, same height)

--- a/public/index.html
+++ b/public/index.html
@@ -249,26 +249,30 @@
 #autoSection input[type="text"]{ padding:10px 10px; }
 #autoSection label{ font-size:12px; }
 
-/* History poga (kvadrāts) */
+/* History poga */
+.historyCell{ align-items:stretch; }
+
 .histIconBtn{
-  width:44px;
+  width:100%;
   height:44px;
-  border-radius:12px;
+  border-radius:14px;
   border:2px solid #cfd6de;
   background:#fff;
   cursor:pointer;
-  display:inline-flex;
+  display:flex;
   align-items:center;
   justify-content:center;
   padding:0;
+  box-sizing:border-box;
 }
+
 .histIconBtn:hover{ background:#eef3f8; }
+
 .histIconBtn img{
-  width:100%;
-  height:100%;
-  padding:0;
-  object-fit:cover;
-  border-radius:10px;
+  width:32px;
+  height:32px;
+  object-fit:contain;
+  border-radius:0;
   display:block;
 }
 
