--- a/public/index.html
+++ b/public/index.html
@@ -250,29 +250,26 @@
 #autoSection label{ font-size:12px; }
 
 /* History poga */
-.historyCell{ align-items:stretch; }
-
 .histIconBtn{
-  width:100%;
+  width:44px;
   height:44px;
-  border-radius:14px;
+  border-radius:12px;
   border:2px solid #cfd6de;
   background:#fff;
   cursor:pointer;
-  display:flex;
+  display:inline-flex;
   align-items:center;
   justify-content:center;
   padding:0;
-  box-sizing:border-box;
 }
-
 .histIconBtn:hover{ background:#eef3f8; }
 
 .histIconBtn img{
-  width:32px;
-  height:32px;
-  object-fit:contain;
-  border-radius:0;
+  width:100%;
+  height:100%;
+  padding:0;
+  object-fit:cover;
+  border-radius:10px;
   display:block;
 }
 
@@ -281,14 +278,16 @@
   display:flex;
   flex-direction:column;
   align-items:flex-end;
+  justify-content:flex-start;
 }
+
 .historyCell label{
   font-size:12px;
-  line-height:14px;
-  color:#667085;
-  margin-bottom:6px;
+  line-height:16px;
+  font-weight:800;
+  color:#222222;            
+  margin:0 0 6px 0;
   display:block;
-}
 
 /* Rotate / šaurāks ekrāns: 2 kolonnas, history vienmēr pa labi */
 @media (max-width: 900px){
