UI: align history button vertically with inputs

--- a/public/index.html
+++ b/public/index.html
@@ -261,6 +261,7 @@
   align-items:center;
   justify-content:center;
   padding:0;
+  .histIconBtn{ margin-top:6px; }
 }
 .histIconBtn:hover{ background:#eef3f8; }
 
@@ -278,15 +279,16 @@
   display:flex;
   flex-direction:column;
   align-items:flex-end;
-  justify-content:flex-start;
+  justify-content:flex-end;
 }
 
 .historyCell label{
   font-size:12px;
   line-height:16px;
+  height:16px;
   font-weight:800;
-  color:#222222;            
-  margin:0 0 6px 0;
+  color:#222222;
+  margin:0;
   display:block;
 }
 /* Rotate / šaurāks ekrāns: 2 kolonnas, history vienmēr pa labi */
