Fix: remove duplicate submit onclick handler

--- a/public/index.html
+++ b/public/index.html
@@ -511,7 +511,7 @@ body.locked-mode #lockModal{ display:block !important; }
   <div class="modalCard" style="max-width:520px;">
     <div class="modalTitle" style="font-size:22px; text-align:center;">Rādījumu iesniegšana vēl nav atvērta</div>
     <div class="modalText" style="text-align:center; font-size:16px; line-height:1.5;">
-      Rādījumus var iesniegt no <b>25. datuma</b> līdz mēneša pēdējai dienai <b>.
+      Rādījumus var iesniegt no <b>25. datuma</b> līdz mēneša pēdējai dienai.
       <div style="margin-top:10px; font-size:14px; color:#667085;">
         Jautājumu gadījumā sazinieties ar klientu apkalpošanu:<br/>
         <b>abonenti@jurmalasudens.lv</b><br/>
