Fix: prevent LOOKUP_ALL_LOCKED init crash

--- a/public/index.html
+++ b/public/index.html
@@ -594,7 +594,7 @@ body.locked-mode #lockModal{ display:block !important; }
   let INVITE_TOKEN = '';
   let INVITE_SUBSCRIBER = '';
   let INVITE_ALL_LOCKED = false;
-  let LOOKUP_ALL_LOCKED = false;
+  var LOOKUP_ALL_LOCKED = false;
 
 
   function setSubmitVisible(isVisible){
