--- a/public/index.html
+++ b/public/index.html
@@ -823,38 +823,35 @@ body.locked-mode #lockModal{ display:block !important; }
     const host = $("#autoAddresses");
     host.innerHTML = "";
 
+    function setConsDisplay(el, value) {
+      if (!el) return;
+      const n = (value === "" || value == null) ? null : Number(value);
+      if (n == null || !Number.isFinite(n)) {
+        el.textContent = "—";
+        el.classList.add("empty");
+        return;
+      }
+      el.textContent = n.toFixed(2);
+      el.classList.remove("empty");
+    }
+
     function computeFromNew(row) {
       const lastEl = $("input[data-role='last']", row);
-      const newEl = $("input[data-role='new']", row);
-      const consEl = $("input[data-role='cons']", row);
+      const newEl  = $("input[data-role='new']", row);
+      const consEl = $("[data-role='cons']", row);
 
-      const prev = parseReading(lastEl.value);
-      const cur = parseReading(newEl.value);
+      const prev = parseReading(lastEl?.value);
+      const cur  = parseReading(newEl?.value);
 
       if (prev == null || cur == null) {
-        if (!String(newEl.value || '').trim()) consEl.value = "";
+        if (!String(newEl?.value || '').trim()) setConsDisplay(consEl, "");
         row.classList.remove("neg");
         return;
       }
 
       const diff = cur - prev;
-      consEl.value = diff.toFixed(2);
+      setConsDisplay(consEl, diff);
       row.classList.toggle("neg", diff < 0);
-    }
-
-    function computeFromCons(row) {
-      const lastEl = $("input[data-role='last']", row);
-      const newEl = $("input[data-role='new']", row);
-      const consEl = $("input[data-role='cons']", row);
-
-      const prev = parseReading(lastEl.value);
-      const cons = parseReading(consEl.value);
-
-      if (prev == null || cons == null) return;
-
-      const cur = prev + cons;
-      newEl.value = cur.toFixed(2);
-      row.classList.toggle("neg", (cur - prev) < 0);
     }
 
     addresses.forEach((a) => {
@@ -893,10 +890,11 @@ body.locked-mode #lockModal{ display:block !important; }
           newInp
         ]);
 
-        const consInp = el("input", { type:"text", inputmode:"decimal", placeholder:"Ievadi patēriņu", "data-role":"cons" });
+        const consDisplay = el("div", { class:"consDisplay empty", "data-role":"cons", text:"—" });
         const f4 = el("div", { class:"field" }, [
           el("label", { text:"Patēriņš" }),
-          consInp
+          consDisplay,
+          el("div", { class:"hint", text:"Aprēķinās automātiski." })
         ]);
 
         const histBtn = el("button", {
@@ -913,7 +911,6 @@ body.locked-mode #lockModal{ display:block !important; }
         if (m && m.locked) {
   row.setAttribute("data-locked", "1");
   newInp.disabled = true;
-  consInp.disabled = true;
 
   const sr = (m.submitted_reading == null) ? "" : String(m.submitted_reading);
   const sc = (m.submitted_consumption == null) ? "" : String(m.submitted_consumption);
@@ -926,13 +923,16 @@ body.locked-mode #lockModal{ display:block !important; }
     newInp.placeholder = "Jau iesniegts";
   }
 
-  if (sc) {
-    consInp.value = sc;
-    consInp.placeholder = "";
-  } else {
-    consInp.value = "";
-    consInp.placeholder = "Jau iesniegts";
+  // Patēriņu mēģinām parādīt, ja serveris ir iedevis (vai var sarēķināt no sr un pēdējā rādījuma)
+  const prevV = parseReading(last);
+  let consV = null;
+  if (sc) consV = parseReading(sc);
+  if (consV == null && sr && prevV != null) {
+    const curV = parseReading(sr);
+    if (curV != null) consV = curV - prevV;
   }
+  setConsDisplay(consDisplay, consV);
+
 } else {
   row.setAttribute("data-locked", "0");
 }
@@ -947,14 +947,7 @@ const f5 = el("div", { class:"field historyCell" }, [
           computeFromNew(row);
           refreshAll();
         });
-
-        consInp.addEventListener("input", () => {
-          consInp.value = normalizeReadingInput(consInp.value);
-          computeFromCons(row);
-          refreshAll();
-        });
-
-        row.append(f1, f2, f3, f4, f5);
+row.append(f1, f2, f3, f4, f5);
         metersHost.appendChild(row);
       });
 
@@ -1029,7 +1022,7 @@ const f5 = el("div", { class:"field historyCell" }, [
        "good",
        LOOKUP_ALL_LOCKED
          ? "<b>Viss iesniegts.</b> Šim mēnesim visi skaitītāji jau ir iesniegti."
-         : "<b>Dati atrasti.</b> Ievadi jauno rādījumu vai patēriņu vismaz vienam skaitītājam."
+         : "<b>Dati atrasti.</b> Ievadi jauno rādījumu vismaz vienam skaitītājam."
       );
       
       renderAuto(j.addresses);
@@ -1199,36 +1192,24 @@ const f5 = el("div", { class:"field historyCell" }, [
     const contract = r.getAttribute("data-contract") || "";
 
     const prev = parseReading($("input[data-role='last']", r).value);
-
     const newEl  = $("input[data-role='new']", r);
-    const consEl = $("input[data-role='cons']", r);
 
     // ✅ JA LOCKED (disabled) → ignorējam šo rindu pilnībā,
     // lai tā neaktivizē pogu un netiek sūtīta uz /api/submit
-    if ((newEl && newEl.disabled) || (consEl && consEl.disabled)) {
+    if (newEl && newEl.disabled) {
       continue;
     }
 
     const newRaw = newEl ? newEl.value : "";
-    const consRaw = consEl ? consEl.value : "";
-
     const newNorm = normalizeReadingInput(newRaw);
-    const consNorm = normalizeReadingInput(consRaw);
-
     const newNum = parseReading(newNorm);
-    const consNum = parseReading(consNorm);
 
     let reading = "";
-
     if (newNorm && CFG.readingRegex.test(newNorm) && newNum != null) {
       reading = newNorm;
-    } else if (consNorm && CFG.readingRegex.test(consNorm) && consNum != null && prev != null) {
-      reading = (prev + consNum).toFixed(2);
-    } else {
-      reading = "";
     }
 
-    out.push({ meter_no: meter, contract_nr: contract, reading, _newRaw: newNorm, _consRaw: consNorm, _prev: prev });
+    out.push({ meter_no: meter, contract_nr: contract, reading, _newRaw: newNorm, _prev: prev });
   }
 
   return out;
@@ -1279,37 +1260,23 @@ const f5 = el("div", { class:"field historyCell" }, [
         if (!rows.length) reasons.push("Nav atrasts neviens skaitītājs.");
 
         // pietiek ar vismaz vienu aizpildītu skaitītāju
-        const anyFilled = rows.some(ln => (ln._newRaw || "").trim() || (ln._consRaw || "").trim());
+        const anyFilled = rows.some(ln => (ln._newRaw || "").trim());
         if (!anyFilled) {
-          reasons.push("Ievadi jauno rādījumu vai patēriņu vismaz vienam skaitītājam.");
+          reasons.push("Ievadi jauno rādījumu vismaz vienam skaitītājam.");
           return reasons;
         }
 
         rows.forEach((ln, idx) => {
           const newNorm = ln._newRaw || "";
-          const consNorm = ln._consRaw || "";
-          const prev = ln._prev;
 
           const hasNew = !!newNorm;
-          const hasCons = !!consNorm;
 
           // tukšos skaitītājus ignorējam
-          if (!hasNew && !hasCons) return;
+          if (!hasNew) return;
 
-          if (hasNew) {
-            if (!CFG.readingRegex.test(newNorm)) {
-              reasons.push(`Skaitītājs ${idx+1}: jaunajam rādījumam jābūt skaitlim (līdz 2 zīmēm aiz komata).`);
-              return;
-            }
-          } else if (hasCons) {
-            if (prev == null) {
-              reasons.push(`Skaitītājs ${idx+1}: nevar ievadīt patēriņu, ja nav zināms pēdējais rādījums.`);
-              return;
-            }
-            if (!CFG.readingRegex.test(consNorm)) {
-              reasons.push(`Skaitītājs ${idx+1}: patēriņam jābūt skaitlim (līdz 2 zīmēm aiz komata).`);
-              return;
-            }
+          if (!CFG.readingRegex.test(newNorm)) {
+            reasons.push(`Skaitītājs ${idx+1}: jaunajam rādījumam jābūt skaitlim (līdz 2 zīmēm aiz komata).`);
+            return;
           }
 
           if (!ln.reading) reasons.push(`Skaitītājs ${idx+1}: ievade nav korekta.`);
@@ -1384,6 +1351,18 @@ const f5 = el("div", { class:"field historyCell" }, [
     updateSubmitState();
     const btn = $("#submitBtn");
     if (btn.classList.contains("disabled")) { showSubmitBlockedInfo(); return; }
+
+    // Negatīvs patēriņš (jaunais rādījums mazāks par pēdējo) nav atļauts
+    if (MODE === "lookup") {
+      const negRows = $$(".auto-meter-row.neg", $("#autoAddresses")).filter(r => {
+        const newEl = $("input[data-role='new']", r);
+        return newEl && !newEl.disabled && String(newEl.value || "").trim();
+      });
+      if (negRows.length) {
+        modalStateError("Negatīvu rādījumu nevar iesniegt. Lūdzu sazināties ar klientu apkalpošanas daļu.");
+        return;
+      }
+    }
 
     btn.classList.add("disabled");
     btn.setAttribute("aria-disabled", "true");
@@ -1523,9 +1502,14 @@ const f5 = el("div", { class:"field historyCell" }, [
 
       r.setAttribute("data-locked", "1");
       const newEl = $("input[data-role='new']", r);
-      const consEl = $("input[data-role='cons']", r);
       if (newEl) { newEl.disabled = true; newEl.placeholder = "Jau iesniegts"; newEl.value = ""; }
-      if (consEl) { consEl.disabled = true; consEl.placeholder = "Jau iesniegts"; consEl.value = ""; }
+
+      const consEl = $("[data-role='cons']", r);
+      if (consEl) {
+        consEl.textContent = "—";
+        consEl.classList.add("empty");
+      }
+
       r.classList.remove("neg");
     }
   }
@@ -1535,25 +1519,14 @@ const f5 = el("div", { class:"field historyCell" }, [
     const lines = [];
 
     function calcReadingForRow(r){
-      const prev = parseReading($("input[data-role='last']", r)?.value);
       const newNorm = normalizeReadingInput($("input[data-role='new']", r)?.value || "");
-      const consNorm = normalizeReadingInput($("input[data-role='cons']", r)?.value || "");
 
       const hasNew = !!newNorm;
-      const hasCons = !!consNorm;
 
-      if (!hasNew && !hasCons) return { hasAny:false, ok:true, reading:"" };
+      if (!hasNew) return { hasAny:false, ok:true, reading:"" };
 
-      if (hasNew) {
-        if (!CFG.readingRegex.test(newNorm)) return { hasAny:true, ok:false, reading:"" };
-        return { hasAny:true, ok:true, reading:newNorm };
-      }
-
-      if (prev == null) return { hasAny:true, ok:false, reading:"" };
-      if (!CFG.readingRegex.test(consNorm)) return { hasAny:true, ok:false, reading:"" };
-      const cons = parseReading(consNorm);
-      if (cons == null) return { hasAny:true, ok:false, reading:"" };
-      return { hasAny:true, ok:true, reading:(prev + cons).toFixed(2) };
+      if (!CFG.readingRegex.test(newNorm)) return { hasAny:true, ok:false, reading:"" };
+      return { hasAny:true, ok:true, reading:newNorm };
     }
 
     for (const r of rows) {
@@ -1630,7 +1603,7 @@ if (btn && !btn.dataset.boundInvite) {
 
       setLookupNotice("good", INVITE_ALL_LOCKED
         ? "<b>Viss iesniegts.</b> Šim mēnesim visi skaitītāji jau ir iesniegti."
-        : "<b>Dati ielādēti.</b> Ievadi jauno rādījumu vai patēriņu."
+        : "<b>Dati ielādēti.</b> Ievadi jauno rādījumu."
       );
 
       renderAuto(j.addresses || []);
@@ -1653,6 +1626,16 @@ if (btn && !btn.dataset.boundInvite) {
     const built = buildInvitePayload();
     if (!built.ok) {
       modalStateError(built.error);
+      return;
+    }
+
+    // Negatīvs patēriņš (jaunais rādījums mazāks par pēdējo) nav atļauts
+    const negRows = $$(".auto-meter-row.neg", $("#autoAddresses")).filter(r => {
+      const newEl = $("input[data-role='new']", r);
+      return newEl && !newEl.disabled && String(newEl.value || "").trim();
+    });
+    if (negRows.length) {
+      modalStateError("Negatīvu rādījumu nevar iesniegt. Lūdzu sazināties ar klientu apkalpošanas daļu.");
       return;
     }
 
